<resources>
    <string name="app_name">CC Game And Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rock_paper_scissors">Batu\nKertas\nGunting</string>
    <string name="you">YOU</string>
    <string name="you_s_rock_icon">You\'s rock icon</string>
    <string name="you_s_paper_icon">You\'s paper icon</string>
    <string name="you_s_scissors_icon">You\'s scissors icon</string>
    <string name="com_s_rock_icon">Com\'s rock icon</string>
    <string name="com_s_paper_icon">Com\'s paper icon</string>
    <string name="reset">Reset</string>
    <string name="com_s_scissors_icon">Com\'s scissors icon</string>
    <string name="com">COM</string>
    <string name="draw">DRAW</string>
    <string name="win">WIN</string>
    <string name="lose">LOSE</string>
    <string name="p1_win">P1\nWIN</string>
    <string name="p2_win">P2\nWIN</string>
    <string name="vs">VS</string>
    <string name="wisungyo">Made by Wisungyo</string>
    <string name="alert_selecting_com">Eitss! Dilarang memilih untuk Komputer.</string>
    <string name="alert_disable">Reset terlebih dahulu sebelum memulai kembali.</string>
    <string name="alert_p1">Giliran Pemain 1.</string>
    <string name="alert_p2">Giliran Pemain 2.</string>
    <string name="profile">Profile</string>
    <string name="pilih_lawanmu">Pilih\nLawanmu!</string>
    <string name="vs_sahabat">vs Sahabat</string>
    <string name="vs_komputer">vs Komputer</string>
    <string name="kamu">Kamu</string>
    <string name="komputer">Komputer</string>
    <string name="menu">Menu</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="bermain_bersama_sahabat">Bermain bersama sahabat</string>
    <string name="lanjut">Lanjut</string>
    <string name="bermain_bersama_komputer">Bermain bersama komputer</string>
    <string name="persiapkan_dirimu">Persiapkan dirimu!</string>
    <string name="tanggal">Tanggal</string>
    <string name="tanggal_memo">Tanggal Memo</string>
    <string name="isi_memo">Isi Memo</string>
    <string name="tambah">Tambah</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="pemain_1">Pemain 1</string>
    <string name="pemain_2">Pemain 2</string>
</resources>