<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/et_update_tanggal"
        android:hint="@string/tanggal"
        android:fontFamily="@font/roboto"
        android:textSize="19sp"
        android:textColor="#6C63FF"
        android:textColorHint="#6C63FF"
        android:inputType="text"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:background="@drawable/bg_input_2"
        android:focusableInTouchMode="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:autofillHints="@string/tanggal" />

    <EditText
        android:id="@+id/et_update_isi"
        android:hint="@string/isi_memo"
        android:fontFamily="@font/roboto"
        android:textSize="19sp"
        android:textColor="#6C63FF"
        android:textColorHint="#6C63FF"
        android:inputType="textMultiLine"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:background="@drawable/bg_input_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/et_update_tanggal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:autofillHints="@string/isi_memo" />

    <Button
        android:id="@+id/btn_update_update"
        android:text="@string/update"
        android:fontFamily="@font/roboto"
        android:textSize="14sp"
        android:textColor="#E0E0E0"
        android:textAllCaps="false"
        android:paddingStart="21dp"
        android:paddingEnd="21dp"
        android:background="@drawable/bg_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/et_update_isi"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_update_delete"
        android:text="@string/delete"
        android:fontFamily="@font/roboto"
        android:textSize="14sp"
        android:textColor="#E0E0E0"
        android:textAllCaps="false"
        android:paddingStart="21dp"
        android:paddingEnd="21dp"
        android:background="@drawable/bg_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/et_update_isi"
        app:layout_constraintEnd_toStartOf="@id/btn_update_update" />

    <Button
        android:id="@+id/btn_update_cancel"
        android:text="@string/cancel"
        android:fontFamily="@font/roboto"
        android:textSize="14sp"
        android:textColor="#E0E0E0"
        android:textAllCaps="false"
        android:paddingStart="21dp"
        android:paddingEnd="21dp"
        android:background="@drawable/bg_intro_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/et_update_isi"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>