<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:background="#E0F0FA"
    tools:context=".intro.Login">

    <ImageView
        android:id="@+id/iv_login"
        android:src="@drawable/intro3"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toTopOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/et_email"
        android:hint="@string/email"
        android:fontFamily="@font/roboto"
        android:textSize="19sp"
        android:textColor="#6C63FF"
        android:textColorHint="#6C63FF"
        android:inputType="textEmailAddress"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:background="@drawable/bg_input_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@id/iv_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:autofillHints="@string/email" />

    <EditText
        android:id="@+id/et_password"
        android:hint="@string/password"
        android:fontFamily="@font/roboto"
        android:textSize="19sp"
        android:textColor="#6C63FF"
        android:textColorHint="#6C63FF"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="16dp"
        android:paddingEnd="38dp"
        android:background="@drawable/bg_input_3"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@id/et_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:autofillHints="@string/password" />

    <Button
        android:id="@+id/btn_login"
        android:text="@string/login"
        android:fontFamily="@font/roboto"
        android:textSize="14sp"
        android:textColor="#E0E0E0"
        android:textAllCaps="false"
        android:paddingStart="64dp"
        android:paddingEnd="64dp"
        android:background="@drawable/bg_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        app:layout_constraintStart_toStartOf="@id/et_password"/>

    <Button
        android:id="@+id/btn_reset"
        android:text="@string/reset"
        android:fontFamily="@font/roboto"
        android:textSize="14sp"
        android:textColor="#E0E0E0"
        android:textAllCaps="false"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:background="@drawable/bg_intro_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        app:layout_constraintEnd_toEndOf="@id/et_password" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

</androidx.constraintlayout.widget.ConstraintLayout>